frontend/deployment/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-frontend
  labels:
    app: portal-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-frontend
  template:
    metadata:
      labels:
        app: portal-frontend
    spec:
      containers:
        - name: portal-frontend
          image: ghcr.io/hjmoons/devops-portal-frontend:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
