frontend/deployment/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-frontend
  labels:
    app: portal-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: portal-frontend
