frontend/deployment/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: portal.devops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal-frontend
                port:
                  number: 80
